@@ -262,12 +262,12 @@ static const FFMPEG_Transcoder::MP4_OPTION m_opt_format_edge[] =
 static const FFMPEG_Transcoder::MP4_OPTION m_opt_codec_ie[] =
 {
     // -profile:v baseline -level 3.0
-    { "profile",              "baseline",                 0,  0 },
-    { "level",                "3.0",                      0,  0 },
+    //{ "profile",              "baseline",                 0,  0 },
+    //{ "level",                "3.0",                      0,  0 },
 
     // -profile:v high -level 3.1
-    //    { "profile",              "high",                     0,  0 },
-    //    { "level",                "3.1",                      0,  0 },
+    { "profile",              "high",                     0,  0 },
+    { "level",                "3.1",                      0,  0 },
 
     // Set speed (changes profile!)
     //{ "preset",               "ultrafast",                0,  0 },
@@ -286,6 +286,46 @@ static const FFMPEG_Transcoder::MP4_OPTION m_opt_format_ie[] =
     //{ "movflags",               "+empty_moov",              0, OPT_ALL },
     //{ "movflags",               "+separate_moof",           0, OPT_ALL },
     //{ "movflags",               "+faststart",               0, OPT_ALL },
+    //{ "movflags",               "+rtphint",                0, OPT_ALL },
+    //{ "movflags",               "+disable_chpl",           0, OPT_ALL },
+    //{ "movflags",               "+omit_tfhd_offset",       0, OPT_ALL },
+    //{ "movflags",               "+default_base_moof",      0, OPT_ALL },
+    //{ "write_tmcd",             "on",                      0, OPT_ALL },      // on, off or auto
+    //{ "movflags",               "+negative_cts_offsets",   0, OPT_ALL },
+    //{ "movflags",               "+isml",                   0, OPT_ALL },
+    { NULL, NULL, 0, 0 }
+};
+
+// ****************************************************************************************************************
+
+// Safari uses Quicktime for playback. Files must be suitable for playback with Quicktime.
+static const FFMPEG_Transcoder::MP4_OPTION m_opt_codec_safari[] =
+{
+    // -profile:v baseline -level 3.0
+    //{ "profile",              "baseline",                 0,  0 },
+    //{ "level",                "3.0",                      0,  0 },
+
+    // -profile:v high -level 3.1
+    //{ "profile",              "high",                     0,  0 },
+    //{ "level",                "3.1",                      0,  0 },
+
+    // Set speed (changes profile!)
+    { "preset",               "ultrafast",                0,  0 },
+    //{ "preset",               "veryfast",                 0,  0 },
+    //{ "tune",                 "zerolatency",              0,  0 },
+    { NULL, NULL, 0, 0 }
+};
+
+static const FFMPEG_Transcoder::MP4_OPTION m_opt_format_safari[] =
+{
+    //{ "moov_size",              "1000000",                 0, OPT_ALL },     // bytes
+    //{ "movflags",               "+frag_keyframe",          0, OPT_ALL },
+    //{ "frag_duration",          "1000000",                 0, OPT_ALL },     // microsenconds
+    //{ "frag_size",              "100000",                  0, OPT_ALL },     // bytes
+    //{ "min_frag_duration",      "1000",                    0, OPT_ALL },     // microsenconds
+    //{ "movflags",               "+empty_moov",             0, OPT_ALL },
+    //{ "movflags",               "+separate_moof",          0, OPT_ALL },
+    //{ "movflags",               "+faststart",              0, OPT_ALL },
     //{ "movflags",               "+rtphint",                0, OPT_ALL },
     //{ "movflags",               "+disable_chpl",           0, OPT_ALL },
     //{ "movflags",               "+omit_tfhd_offset",       0, OPT_ALL },
@@ -318,6 +358,11 @@ const FFMPEG_Transcoder::MP4_PROFILE  FFMPEG_Transcoder::m_profile[] =
         .m_profile = PROFILE_IE,
         .m_opt_codec = m_opt_codec_ie,
         .m_opt_format = m_opt_format_ie
+    },
+    {
+        .m_profile = PROFILE_SAFARI,
+        .m_opt_codec = m_opt_codec_safari,
+        .m_opt_format = m_opt_format_safari
     },
     // Must be last entry
     {
