@@ -212,6 +212,7 @@ static void usage(char *name)
           "                           FF       Firefox\n"
           "                           EDGE     Microsoft Edge or Internet Explorer > 11\n"
           "                           IE       Microsoft Internet Explorer <= 11\n"
+          "                           SAFARI   Apple Safari\n"
           "                           Default: NONE\n"
           "\n"
           "Audio Options:\n"
